--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,34 @@
 img {
     height: 200px;
-    width: 300px;
+    width: 400px;
+    border: 2px solid;
+    border-color: rgb(48, 100, 89);
 }
 
+h1, h2 {
+    text-align: center;
+    color: rgb(48, 100, 89);
+}
+
+.item {
+   
+   padding: 20px;
+   margin-bottom: 20px;
+   text-align: center;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+}
+
+table {
+    width: 100%;
+}
+
+td {
+    width: 50%;
+    box-sizing: border-box; 
+    padding: 20px;
+    vertical-align: top; 
+}
