--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,8 +1,15 @@
 img {
     height: 200px;
-    width: 400px;
+    width: 100%;
     border: 2px solid;
     border-color: rgb(48, 100, 89);
+    margin :0 auto;
+    display: block;
+}
+
+.headimg {
+    width: 93%;
+    height: 300px;
 }
 
 h1, h2 {
@@ -11,10 +18,8 @@ h1, h2 {
 }
 
 .item {
-   
    padding: 20px;
    margin-bottom: 20px;
-   text-align: center;
 }
 
 body {
@@ -24,11 +29,13 @@ body {
 
 table {
     width: 100%;
+    
 }
 
 td {
     width: 50%;
     box-sizing: border-box; 
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     vertical-align: top; 
 }
