--- a/Styles/style.css
+++ b/Styles/style.css
@@ -39,3 +39,27 @@ td {
     padding-right: 20px;
     vertical-align: top; 
 }
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+    background-color: #f2f2f2;
+    margin-bottom: 20px;
+}
+
+nav ul li {
+    display: inline-block; 
+    margin-right: 20px; 
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+    color: rgb(48, 100, 89);
+}
